fix(gui): Broken color in dark mode

--- a/src/ui/theme.css
+++ b/src/ui/theme.css
@@ -332,7 +332,8 @@
 }
 
 #undiscord .log-debug {
-    color: inherit;
+    /* Buggy color on my Discord */
+    color: white;
 }
 
 #undiscord .log-info {
